--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,14 +1,17 @@
 body{ text-align:justify; color: {color:text}; font-family: 'Open Sans', sans-serif; } 
 #header{
+	background-color: #f7f7f7;
 	height:100px;
 	font-size:12px;
 }
 
 #footer{
+	background-color: #f7f7f7;
 	height:100px;
 	font-size:12px;
 }
 .centered{
+	background-color: #f7f7f7;
 	width: 960px;
 	height:650px;
 	margin-right: auto;
@@ -18,6 +21,7 @@ body{ text-align:justify; color: {color:text}; font-family: 'Open Sans', sans-se
 }
 
 .third{
+	background-color: #f7f7f7;
 	float:left;
 	display:inline-block;
 	width: 314px;
@@ -30,10 +34,15 @@ body{ text-align:justify; color: {color:text}; font-family: 'Open Sans', sans-se
 	height:20px;
 }
 
+.nav {
+	background-color: #f7f7f7;
+	padding-right: 150px;
+}
+
 .nav a{
+	padding: 10px 25px 0px 0px;
 	color:rgb(27, 117, 187);
-	font-size:25px;
-	text-transform: uppercase;
+	font-size:18px;
 }
 
 .nav li{
