--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,17 +1,14 @@
-body{ text-align:justify; color: {color:text}; font-family: 'Open Sans', sans-serif; } 
+body{ text-align:justify; color: #565656; font-family: 'Open Sans', sans-serif; background-color: #f7f7f7} 
 #header{
-	background-color: #f7f7f7;
 	height:100px;
 	font-size:20px;
 }
 
 #footer{
-	background-color: #f7f7f7;
 	height:100px;
 	font-size:12px;
 }
 .centered{
-	background-color: #f7f7f7;
 	width: 960px;
 	height:650px;
 	margin-right: auto;
@@ -21,7 +18,6 @@ body{ text-align:justify; color: {color:text}; font-family: 'Open Sans', sans-se
 }
 
 .third{
-	background-color: #f7f7f7;
 	float:left;
 	display:inline-block;
 	width: 314px;
@@ -34,17 +30,13 @@ body{ text-align:justify; color: {color:text}; font-family: 'Open Sans', sans-se
 	height:20px;
 }
 
-.nav {
-	background-color: #f7f7f7;
-
-}
-
 .nav a{
 	padding: 10px 25px 0px 0px;
-	color:rgb(27, 117, 187);
+	color: #1b75bb;
 	font-size:18px;
 }
 
 .nav li{
 	display:inline;
 }
+
