--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,15 +2,16 @@ body{ text-align:justify; color: #565656; font-family: 'Open Sans', sans-serif; 
 #header{
 	height:100px;
 	font-size:20px;
+	color: #1b75bb;
 }
 
 #footer{
-	height:100px;
+	height:15px;
 	font-size:12px;
 }
 .centered{
 	width: 960px;
-	height:650px;
+	height:550px;
 	margin-right: auto;
 	margin-left: auto;
 	font-family: 'Open Sans', sans-serif;
