--- a/stylesheet.css
+++ b/stylesheet.css
@@ -41,3 +41,88 @@ body{ text-align:justify; color: #565656; font-family: 'Open Sans', sans-serif; 
 	display:inline;
 }
 
+/* unvisited link */
+a:link {
+	text-decoration: none;
+    color: #769BB5;
+}
+
+/* visited link */
+a:visited {
+	text-decoration: none;
+    color: #424242;
+}
+
+/* mouse over link */
+a:hover {
+	text-decoration: none;
+    color: #1B75BB;
+}
+
+/* selected link */
+a:active {
+	text-decoration: none;
+    color: #424242;
+}
+ 
+.pic { 
+  height: 210px;
+  width: 314px;
+  overflow: hidden; 
+}
+
+/*GROW*/
+.grow img {
+  height: 210px;
+  width: 314px;
+
+  -webkit-transition: all 0.8s ease;
+     -moz-transition: all 0.8s ease;
+       -o-transition: all 0.8s ease;
+      -ms-transition: all 0.8s ease;
+          transition: all 0.8s ease;
+}
+ 
+.grow img:hover {
+  width: 375px;
+  height: 250px;
+  margin-left: -25px;
+  margin-top: -25px;
+}
+
+.image {
+    position:relative;
+    width:314px;
+    height:100px;
+}
+.image img {
+    width:100%;
+    vertical-align:top;
+}
+.image:after, .image:before {
+    position:absolute;
+    opacity:0;
+    transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+}
+.image:after {
+    content:'\A';
+    width:100%; height:100%;
+    top:0; left:0;
+    background:rgba(0,0,0,0.1);
+}
+.image:before {
+    content: attr(data-content);
+    width:100%;
+    color:#fff;
+    z-index:1;
+    bottom:0;
+    padding:20px 10px;
+    text-align:center;
+    background:rgba(0, 0, 0, 0.1);
+    box-sizing:border-box;
+    -moz-box-sizing:border-box;
+}
+.image:hover:after, .image:hover:before {
+    opacity:1;
+}
