--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,13 +5,17 @@ body{ text-align:justify; color: #565656; font-family: 'Open Sans', sans-serif; 
 	color: #1b75bb;
 }
 
+.copyright{
+	font-size:12px;
+}
+
 #footer{
 	height:15px;
 	font-size:12px;
 }
 .centered{
 	width: 960px;
-	height:550px;
+	height:520px;
 	margin-right: auto;
 	margin-left: auto;
 	font-family: 'Open Sans', sans-serif;
@@ -75,6 +79,7 @@ a:active {
 .grow img {
   height: 210px;
   width: 314px;
+  opacity: 0.93;
 
   -webkit-transition: all 0.8s ease;
      -moz-transition: all 0.8s ease;
@@ -88,16 +93,17 @@ a:active {
   height: 250px;
   margin-left: -25px;
   margin-top: -25px;
+  opacity: 1;
 }
 
 .image {
     position:relative;
     width:314px;
-    height:100px;
+    height:195px;
 }
 .image img {
     width:100%;
-    vertical-align:top;
+    vertical-align:baseline;
 }
 .image:after, .image:before {
     position:absolute;
@@ -107,19 +113,20 @@ a:active {
 }
 .image:after {
     content:'\A';
-    width:100%; height:100%;
-    top:0; left:0;
-    background:rgba(0,0,0,0.1);
+    width:0%; height:100%;
+    top:100; left:0;
+    background:rgba(0,0,0,0.9);
 }
 .image:before {
     content: attr(data-content);
     width:100%;
-    color:#fff;
+    color:#FFF;
     z-index:1;
     bottom:0;
-    padding:20px 10px;
+    padding:10px 0px;
     text-align:center;
-    background:rgba(0, 0, 0, 0.1);
+    font-size:25px;
+    background:rgba(0, 0, 0, 0.5);
     box-sizing:border-box;
     -moz-box-sizing:border-box;
 }
