--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
-body{ text-align:justify; color: #565656; font-family: 'Open Sans', sans-serif; background-color: #f7f7f7} 
+body{ text-align:left ; color: #565656; font-family: 'Open Sans', sans-serif; font-size: 13px; line-height:180%; background-color: #f7f7f7} 
 #header{
 	height:100px;
-	font-size:20px;
+	font-size:15px;
 	color: #1b75bb;
 	max-width: 100%;
 	max-height: 100%;
